force-app/main/default/objects/HelloSign__Template__c/HelloSign__Template__c.object-meta.xml
<CustomObject>
    <label>Dropbox Sign Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dropbox Sign Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>