force-app/main/default/objects/HelloSign__Template__c/fields/HelloSign__Allow_Archiving__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Allow_Archiving__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field on the Template custom object. This field is checked automatically by the archiving button when the template is removed from Dropbox Sign.  This prevents one-sided archiving.</description>
    <label>Allow Archiving</label>
    <type>Checkbox</type>
</CustomField>