force-app/main/default/objects/HelloSign__Template__c/fields/HelloSign__AllowAdditionalFiles__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__AllowAdditionalFiles__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field on the Template custom object. The ability to allow a user to add additional documents when sending a template.</description>
    <label>Allow Additional Attachments</label>
    <type>Checkbox</type>
</CustomField>