force-app/main/default/objects/HelloSign__Template__c/fields/HelloSign__AllowReassign__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__AllowReassign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field on the Template custom object. The ability to have a signer reassign the signature to another person.</description>
    <label>Allow Reassignment</label>
    <type>Checkbox</type>
</CustomField>