force-app/main/default/objects/HelloSign__Template__c/fields/HelloSign__Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Delivery_Method__c</fullName>
    <description>Dropdown field on the Template custom object. This field records the method of how the Signature Request will be delivered</description>
    <label>Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Request via Email</label>
            </value>
            <value>
                <fullName>In Person</fullName>
                <label>Request in Person</label>
            </value>
            <value>
                <fullName>Running User</fullName>
                <label>Running User Signs</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>