force-app/main/default/objects/HelloSign__Template__c/fields/HelloSign__Dynamic_File_Name_Contains__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Dynamic_File_Name_Contains__c</fullName>
    <description>String field on the Template custom object</description>
    <label>Dynamic File Name Contains</label>
    <length>255</length>
    <type>Text</type>
</CustomField>