force-app/main/default/objects/HelloSign__Template__c/fields/HelloSign__External_Template_Type__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__External_Template_Type__c</fullName>
    <description>String field on the Template custom object</description>
    <label>External Template Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>