force-app/main/default/objects/HelloSign__Template__c/fields/HelloSign__For_Embedded_Signing__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__For_Embedded_Signing__c</fullName>
    <description>Checkbox field on the Template custom object</description>
    <formula>text(HelloSign__Delivery_Method__c) = &quot;In Person&quot; || text(HelloSign__Delivery_Method__c) = &quot;Running User&quot;</formula>
    <label>For Embedded Signing</label>
    <type>Checkbox</type>
</CustomField>