force-app/main/default/objects/HelloSign__Template__c/fields/HelloSign__HadSignificantChanges__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__HadSignificantChanges__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the template has had incompleted significant changes</description>
    <label>Had Significant Changes</label>
    <type>Checkbox</type>
</CustomField>