force-app/main/default/objects/HelloSign__Template__c/fields/HelloSign__IsSignersSequential__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__IsSignersSequential__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field on the Template custom object. If checked, the signers are sequential based on the signer order.  If unchecked, all signers are in parallel regardless of the signer order.</description>
    <label>Signers are Sequential</label>
    <type>Checkbox</type>
</CustomField>