force-app/main/default/objects/HelloSign__Template__c/fields/HelloSign__Lock_Dynamic_File__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Lock_Dynamic_File__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field on the Template custom object</description>
    <label>Lock Dynamic File</label>
    <type>Checkbox</type>
</CustomField>