force-app/main/default/objects/HelloSign__Template__c/fields/HelloSign__MergeFields__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__MergeFields__c</fullName>
    <description>String field on the Template custom object. The merge fields that are available in the template.</description>
    <label>Merge Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>