force-app/main/default/objects/HelloSign__Template__c/fields/HelloSign__Message2__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Message2__c</fullName>
    <description>String field on the Template custom object. This is the default message used when sending requests for signature.</description>
    <label>Message</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>