force-app/main/default/objects/HelloSign__Template__c/fields/HelloSign__Optional_CC__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Optional_CC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field on the Template custom object</description>
    <label>Optional Cc</label>
    <type>Checkbox</type>
</CustomField>