force-app/main/default/objects/HelloSign__Template__c/fields/HelloSign__RestrictTitleAndMessage__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__RestrictTitleAndMessage__c</fullName>
    <description>Dropdown field on the Template custom object. Restricting Title and Message will not allow a requestor to change the Title and Message when sending for signature</description>
    <label>Restrict Title And Message</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Restrict None</fullName>
                <default>true</default>
                <label>Restrict None</label>
            </value>
            <value>
                <fullName>Restrict Title</fullName>
            </value>
            <value>
                <fullName>Restrict Message</fullName>
            </value>
            <value>
                <fullName>Restrict Both</fullName>
            </value>
            <value>
                <fullName>Restrict</fullName>
                <isActive>false</isActive>
                <label>Restrict</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>