force-app/main/default/objects/HelloSign__Template__c/fields/HelloSign__SkipPrepare__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__SkipPrepare__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field on the Template custom object</description>
    <label>Skip Prepare</label>
    <type>Checkbox</type>
</CustomField>