force-app/main/default/objects/HelloSign__Template__c/fields/HelloSign__SkipPreview__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__SkipPreview__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field on the Template custom object. Request sent with Skip Preview enabled will not show a preview screen for the request, but rather send without a preview</description>
    <label>Skip Preview</label>
    <type>Checkbox</type>
</CustomField>