force-app/main/default/objects/HelloSign__Template__c/fields/HelloSign__SourceObject__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__SourceObject__c</fullName>
    <description>String field on the Template custom object. The object that the template is used for (API Name)</description>
    <label>Source Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>