force-app/main/default/objects/HelloSign__Template__c/fields/HelloSign__Status__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Status__c</fullName>
    <description>String field on the Template custom object. The status of the template.  Includes: Draft, Pending, Active, Error, Archived.  Note this is set by automation and should not be changed manually.</description>
    <label>Status</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>