force-app/main/default/objects/HelloSign__Template__c/fields/HelloSign__Template_Type__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Template_Type__c</fullName>
    <description>Dropdown field on the Template custom object. Either &quot;External&quot; (documents generated outside of Dropbox Sign to be sent via Sign) or &quot;Salesforce&quot; (Dropbox-Sign-generated documents).</description>
    <label>Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>