force-app/main/default/objects/HelloSign__Template__c/fields/HelloSign__TemplateUUID__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__TemplateUUID__c</fullName>
    <description>String field on the Template custom object. Unique identifier used to link templates with Dropbox Sign</description>
    <externalId>true</externalId>
    <label>Template UUID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>