force-app/main/default/objects/HelloSign__Template__c/fields/HelloSign__Text_Tags_Enabled__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Text_Tags_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field on the Template custom object. If a dynamic file is used for this template, does that file include text tags?</description>
    <label>Text Tags Enabled</label>
    <type>Checkbox</type>
</CustomField>