force-app/main/default/objects/HelloSign__Template__c/fields/HelloSign__Title__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Title__c</fullName>
    <description>String field on the Template custom object. This title will auto populate at time to send for signature</description>
    <label>Title</label>
    <length>200</length>
    <type>Text</type>
</CustomField>