force-app/main/default/objects/HelloSign__Template__c/fields/HelloSign__TotalSignerRoles__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__TotalSignerRoles__c</fullName>
    <description>Number field on the Template custom object. The number of related signer roles.</description>
    <label>Total Signer Roles</label>
    <summaryForeignKey>HelloSign__SignerRole__c.HelloSign__Template__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>