force-app/main/default/objects/HelloSign__Template__c/listViews/HelloSign__All.listView-meta.xml
<ListView>
    <fullName>HelloSign__All</fullName>
    <columns>NAME</columns>
    <columns>HelloSign__SourceObject__c</columns>
    <columns>HelloSign__Status__c</columns>
    <columns>HelloSign__Title__c</columns>
    <columns>HelloSign__Message2__c</columns>
    <columns>HelloSign__TotalSignerRoles__c</columns>
    <columns>HelloSign__AllowReassign__c</columns>
    <columns>HelloSign__AllowAdditionalFiles__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>