force-app/main/default/objects/HelloSign__Template__c/listViews/HelloSign__Draft.listView-meta.xml
<ListView>
    <fullName>HelloSign__Draft</fullName>
    <columns>NAME</columns>
    <columns>HelloSign__SourceObject__c</columns>
    <columns>HelloSign__Status__c</columns>
    <columns>HelloSign__Title__c</columns>
    <columns>HelloSign__Message2__c</columns>
    <columns>HelloSign__TotalSignerRoles__c</columns>
    <columns>HelloSign__AllowReassign__c</columns>
    <columns>HelloSign__AllowAdditionalFiles__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HelloSign__Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>Draft</label>
</ListView>